[gd_scene load_steps=68 format=3 uid="uid://bobjqen2l8ppo"]

[ext_resource type="Script" uid="uid://boe02r0pgta1o" path="res://Player/player.gd" id="1_k87gr"]
[ext_resource type="Texture2D" uid="uid://dpkqiyldt65vi" path="res://Sprites/Alexander.png" id="2_1gtpu"]
[ext_resource type="Texture2D" uid="uid://s03f4ec3t4mw" path="res://Sprites/Running,png.png" id="2_jdwmw"]
[ext_resource type="Texture2D" uid="uid://2nxe2tpyg13h" path="res://Sprites/Alexander_Idle.png" id="4_8g4oa"]
[ext_resource type="PackedScene" uid="uid://nourvdrfqdkn" path="res://Player/swipe_attack.tscn" id="4_ddoul"]
[ext_resource type="Texture2D" uid="uid://daiqych1ilayu" path="res://Sprites/Jump.png" id="5_s1rgi"]
[ext_resource type="Texture2D" uid="uid://cb864dc345k1m" path="res://Sprites/Jumping.png" id="5_vlldt"]
[ext_resource type="PackedScene" uid="uid://dn1c3gfcl35si" path="res://UI/InputSettings/InputSettings.tscn" id="6_6ysni"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8g4oa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ddoul"]
atlas = ExtResource("2_jdwmw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wa8t"]
atlas = ExtResource("4_8g4oa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7tob"]
atlas = ExtResource("4_8g4oa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm7nj"]
atlas = ExtResource("4_8g4oa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mea3"]
atlas = ExtResource("4_8g4oa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5gs"]
atlas = ExtResource("4_8g4oa")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nb2p"]
atlas = ExtResource("5_s1rgi")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7xyo"]
atlas = ExtResource("5_s1rgi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sa4y"]
atlas = ExtResource("5_vlldt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g4oa"]
atlas = ExtResource("2_jdwmw")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ysni"]
atlas = ExtResource("2_jdwmw")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlldt"]
atlas = ExtResource("2_jdwmw")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1rgi"]
atlas = ExtResource("2_jdwmw")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j23h2"]
atlas = ExtResource("2_jdwmw")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j2ni"]
atlas = ExtResource("2_jdwmw")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0k0e"]
atlas = ExtResource("2_jdwmw")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_jdwmw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddoul")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1gtpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wa8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7tob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm7nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mea3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5gs")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nb2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7xyo")
}],
"loop": false,
"name": &"jump_start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sa4y")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddoul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g4oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ysni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlldt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1rgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j23h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j2ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0k0e")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tok1r"]
radius = 18.0
height = 73.0

[sub_resource type="LabelSettings" id="LabelSettings_tok1r"]
font_size = 11
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_j23h2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p7tob"]
resource_name = "dash"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v0k0e"]
resource_name = "default"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5wa8t"]
resource_name = "jump_start"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump_start"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0j2ni"]
resource_name = "jumping"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jumping"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s1rgi"]
resource_name = "running"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"running"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dm7nj"]
_data = {
&"RESET": SubResource("Animation_j23h2"),
&"dash": SubResource("Animation_p7tob"),
&"default": SubResource("Animation_v0k0e"),
&"jump_start": SubResource("Animation_5wa8t"),
&"jumping": SubResource("Animation_0j2ni"),
&"running": SubResource("Animation_s1rgi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s1rgi"]
animation = &"dash"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_j23h2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_0j2ni"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_s1rgi")
nodes/Animation/position = Vector2(75, 182)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_j23h2")
nodes/TimeScale/position = Vector2(280, 100)
nodes/output/position = Vector2(520, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3mea3"]
animation = &"default"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_7v5gs"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_8sa4y"]
graph_offset = Vector2(-181, 87)
nodes/Animation/node = SubResource("AnimationNodeAnimation_3mea3")
nodes/Animation/position = Vector2(0, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_7v5gs")
nodes/TimeScale/position = Vector2(180, 100)
nodes/output/position = Vector2(440, 160)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v0k0e"]
animation = &"jump_start"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_5wa8t"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_p7tob"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_v0k0e")
nodes/Animation/position = Vector2(80, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_5wa8t")
nodes/TimeScale/position = Vector2(360, 180)
nodes/output/position = Vector2(600, 160)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dm7nj"]
animation = &"jumping"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3mea3"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_7v5gs"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_dm7nj")
nodes/Animation/position = Vector2(178, 141)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3mea3")
nodes/TimeScale/position = Vector2(380, 180)
nodes/output/position = Vector2(600, 160)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8sa4y"]
animation = &"running"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3nb2p"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_d7xyo"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_8sa4y")
nodes/Animation/position = Vector2(180, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3nb2p")
nodes/TimeScale/position = Vector2(401, 198)
nodes/output/position = Vector2(680, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3nb2p"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_evw08"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_roy6y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5tep"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ps8ct"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7uipr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yifbt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s0mko"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hqjia"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x70vp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wo5nf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_croik"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bgaaw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gv3fu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xu7fl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_78fhc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d7xyo"]
states/Start/position = Vector2(187, 100)
states/dash/node = SubResource("AnimationNodeBlendTree_0j2ni")
states/dash/position = Vector2(427, -7)
states/idle/node = SubResource("AnimationNodeBlendTree_8sa4y")
states/idle/position = Vector2(297, 159)
states/jump_start/node = SubResource("AnimationNodeBlendTree_p7tob")
states/jump_start/position = Vector2(610, 5)
states/jumping/node = SubResource("AnimationNodeBlendTree_7v5gs")
states/jumping/position = Vector2(622, 159)
states/running/node = SubResource("AnimationNodeBlendTree_d7xyo")
states/running/position = Vector2(394, 292)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_3nb2p"), "idle", "running", SubResource("AnimationNodeStateMachineTransition_evw08"), "running", "idle", SubResource("AnimationNodeStateMachineTransition_roy6y"), "idle", "dash", SubResource("AnimationNodeStateMachineTransition_u5tep"), "dash", "idle", SubResource("AnimationNodeStateMachineTransition_ps8ct"), "dash", "running", SubResource("AnimationNodeStateMachineTransition_7uipr"), "running", "dash", SubResource("AnimationNodeStateMachineTransition_yifbt"), "running", "jump_start", SubResource("AnimationNodeStateMachineTransition_s0mko"), "jump_start", "running", SubResource("AnimationNodeStateMachineTransition_hqjia"), "jump_start", "idle", SubResource("AnimationNodeStateMachineTransition_x70vp"), "idle", "jump_start", SubResource("AnimationNodeStateMachineTransition_wo5nf"), "jump_start", "jumping", SubResource("AnimationNodeStateMachineTransition_croik"), "jumping", "idle", SubResource("AnimationNodeStateMachineTransition_bgaaw"), "idle", "jumping", SubResource("AnimationNodeStateMachineTransition_gv3fu"), "jumping", "running", SubResource("AnimationNodeStateMachineTransition_xu7fl"), "running", "jumping", SubResource("AnimationNodeStateMachineTransition_78fhc")]
graph_offset = Vector2(-66, -47)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_layer = 4
collision_mask = 11
script = ExtResource("1_k87gr")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_1gtpu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_8g4oa")
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_jdwmw")
animation = &""
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2.5)
shape = SubResource("CapsuleShape2D_tok1r")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = -59.0
offset_right = 33.5
offset_bottom = -36.0
grow_horizontal = 2
size_flags_vertical = 0
text = "health: 999"
label_settings = SubResource("LabelSettings_tok1r")
horizontal_alignment = 1
uppercase = true

[node name="SwipeAttack" parent="." instance=ExtResource("4_ddoul")]
position = Vector2(32, 0)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KnockbackLockTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="InputSettings" parent="GUI" instance=ExtResource("6_6ysni")]
visible = false

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dm7nj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_d7xyo")
anim_player = NodePath("../AnimationPlayer")
parameters/dash/TimeScale/scale = 1.0
parameters/idle/TimeScale/scale = 1.0
parameters/jump_start/TimeScale/scale = 1.0
parameters/jumping/TimeScale/scale = 1.0
parameters/running/TimeScale/scale = 1.0

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="KnockbackLockTimer" to="." method="_on_knockback_lock_timer_timeout"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_blinking_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
